--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,9 +12,9 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary: #1976d2;
-$secondary: #26a69a;
-$accent: #9c27b0;
+$primary: #943939;
+$secondary: #f5f5dc;
+$accent: #3d3d3d;
 
 $dark: #1d1d1d;
 $dark-page: #121212;
